# FirstGame

./: .gitignore  .headerPlayer.h.swp  .headerVisuals.h.swp  .main.cpp.swp  CMakeLists.txt  NPCs.cpp  NPCs.h  README.md  headerMath.h  headerPlayer.h  headerVisuals.h  main.cpp  math.cpp  npc.cpp  player.cpp  player.h  visuals.cpp  window.cpp
images/: Health1.jpg~  Health2.jpg~  Health3.jpg~  Player.xcf  points.png~
include/: headerAppleTree.h  headerPlayer.h  headerVectorMath.h  headerVisuals.h
src/: appleTree.cpp  main.cpp  player.cpp  visuals.cpp
web/: main.js  main.wasm
